--- a/temp.tex
+++ b/temp.tex
@@ -39,6 +39,7 @@
     \includegraphics[width=50mm]{msu.eps}
 
     \bigskip
+	LALALA\\
     Факультет Вычислительной Математики и Кибернетики\\
     Кафедра Математических Методов Прогнозирования\\[10mm]
 
