--- a/temp.tex
+++ b/temp.tex
@@ -169,10 +169,10 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}} = \sum
 \end{figure}
 	\item
 	{\bf Метод главных компонент}
-	\par Метод главных компонент (англ. Principal Components Analysis, PCA) — один из основных способов уменьшить размерность данных, потеряв наименьшее количество информации. По сути получаемый сигнал является многомерной случайной величиной. Целью данного метода является построение такого ортогонального преобразования координат, в результате которого корреляции между отдельными координатами обратятся в нуль. 	
-	\par Необходимо найти ортонормированный базис $\{a_1, \dots, a_n \}$, в котором коэффициент ковариации между различными координатами равен нулю. Задача о выделении главных компонент приводит к задаче диагонализации выборочной матрицы ковариаций. Матрица A преобразования данных к главным компонентам состоит из векторов главных компонент, расположенных в порядке убывания собственных значений:
-$A=\left \{a_1,...,a_n \right \}^T.$ Большая часть вариации данных будет сосредоточена в первых координатах, что позволяет перейти к пространству меньшей размерности.
-
+	\par Метод главных компонент (англ. Principal Components Analysis, PCA) — один из основных способов уменьшить размерность данных, потеряв наименьшее количество информации. Данный метод производит поиск преобразования данных в семействе линейных функций:
+$$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
+где $x \in \mathbb{R}^D, t \in \mathbb{R}^d$ - исходный и преобразованный сигналы соответственно, $W = ( {\textbf w_1}| \dots | { \textbf w_d}) \in \mathbb{R}^{D \times d}, \mu \in \mathbb{R}^D.$ Геометрическим смыслом данного преобразования является проекция данных на гиперплоскость с базисом ${\textbf w_1}, \dots, {\textbf w_d}$. Данный метод предпологает выбор гиперплоскости в соответствии с минимизацией суммы квадратов отклонений исходных объектов от их проекций.
+	\par Можно показать, что векторы главных компонент — это ортонормированный набор  $\left\{a_1,..., a_n \right\}$ собственных векторов эмпирической ковариационной матрицы, расположенных в порядке убывания собственных значений $\lambda: \lambda_1 \ge \lambda_2 \ge ... \ge \lambda_n \ge 0$. Большая часть вариации данных будет сосредоточена в первых координатах, что позволяет перейти к пространству меньшей размерности.
 	\item
 	{\bf Метод независимых компонент}
 	\par Метод независимых компонент является сравнительно новым методом. Впервые алгоритм был предложен Беллом и Сейновским в 1995. Он 
