Обзор почти закончен

--- a/temp.tex
+++ b/temp.tex
@@ -123,6 +123,7 @@
 \clearpage 
 
 \section{Обзор методов}
+	\par TODO: Переименовать раздел и вставить ссылки на источники
 	\par Образование и колебание потенциалов головного мозга является результатом физико-химических процессов, лежащих в основе обмена веществ в нервной ткани.
 	\par В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. TODO: картинка со схемой работы интерфейса
 
@@ -132,11 +133,12 @@
 	\item {\bf Удаление постоянного амплитудного смещения}
 	\par {\it Постоянное амплитудное смещение} или {\it DC offset} (англ. {\it direct current offset}, постоянное смещение потока) ~--- отклонение волновой формы относительно оси нулевого уровня сигнала. Амплитудное смещение, наблюдаемое в электроэнцефаллограмме, может быть разложено на две основные составляющие: постоянное смещение, возникающее из-за технических особенностей передачи данных, и  смещение, возникающее из-за взаимодействия электрической цепи с потенциалом тела.
 	\item {\bf Полосовая фильтрация}
+	\par TODO: написать про фильтры НЧ, ВЧ, полосы
 	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами. С целью выявления компонент, отвечающих соответствующим ритмам, применяются методы фильтрации в заданном диапазоне частот. Диапазон частот выбирается, исходя из априорной информации о ритмах. К примеру, для выделения компоненты, отвечащей за воображаемые движения различных частей тела, используется диапазон $\mu$-ритма (8--13 Гц).
 	\item {\bf Отбор электродов}
-	\par Современные электроэнцефалографы оснащены десятками электродов, однако информация, получаемая при помощи такого количества сенсоров является избыточной. Кроме того, увеличение числа электродов ведёт к повышению стоимости устройства и времени на подготовку к использованию, что является недопустимым для электроэнцефалографоф, разработанных для коммерческого использования. В связи с этим, в современных исследованиях по тематике нейрокомпьютерных интерфейсов наиболее распространены два подхода к решению данной проблемы:
+	\par Современные электроэнцефалографы оснащены десятками электродов, однако информация, получаемая при помощи такого количества сенсоров, является избыточной. Кроме того, увеличение числа электродов ведёт к повышению стоимости устройства и времени на подготовку к использованию, что является недопустимым для электроэнцефалографов, разработанных для коммерческого использования. В связи с этим в современных исследованиях по тематике нейрокомпьютерных интерфейсов наиболее распространены два подхода к решению данной проблемы:
 	\begin{enumerate}
-	\item выбор электродов, исходя из априорных знаний о локализации компонент сигнала на скальпе;
+	\item выбор электродов с учётом априорных знаний о локализации компонент сигнала на скальпе;
 	\item использование методов отбора признаков.
 	\end{enumerate}
 	\end{itemize}
@@ -145,7 +147,7 @@
 	\begin{itemize}
 	\item
 	{\bf Преобразование Фурье}
-	TODO: Нужно ли упомянуть теорему Котельникова?
+	\par TODO: Нужно ли упомянуть теорему Котельникова?
 	\par Зачастую анализ сигналова проводится при помощи разложения на "базисные" функции, каждая из которых отвечает некоторой частоте. Таким образом можно проанализировать степень выраженности колебаний некой частоты. В частности, преобразование Фурье использует в качестве базисных функций синусоиды. Для дискретных сигналов, имеющих место в задаче построения нейрокомпьютерного интерфейса, применяется дискретное преобразование Фурье.
 	\par Пусть имеется дискретный сигнал $x = (x_0, \dots, x_{N-1})$. Тогда его можно представить в виде линейной комбинации дискретных синусоид следующего вида:
 $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}} = \sum_{k=0}^{\frac{N}{2}} A_k \cos{\frac{2 \pi k n}{N}} + \sum_{k=0}^{\frac{N}{2}} B_k \sin{\frac{2 \pi k n}{N}}, n = \overline{0, N-1}.$$
@@ -175,29 +177,40 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 	\par Можно показать, что векторы главных компонент — это ортонормированный набор  $\left\{a_1,..., a_n \right\}$ собственных векторов эмпирической ковариационной матрицы, расположенных в порядке убывания собственных значений $\lambda: \lambda_1 \ge \lambda_2 \ge ... \ge \lambda_n \ge 0$. Большая часть вариации данных будет сосредоточена в первых координатах, что позволяет перейти к пространству меньшей размерности.
 	\item
 	{\bf Метод независимых компонент}
-	\par Метод независимых компонент является сравнительно новым методом. Впервые алгоритм был предложен Беллом и Сейновским в 1995. Он 
-позволяет восстановить независимые источники, которые линейно смешиваются и регистрируются несколькими датчиками. Этот метод 
-идеально подходит для анализа ЭЭГ при выделении артефактов глазных движений, а также для анализа вызванных потенциалов при выделении компонент, связанных с различными (независимыми) процессами.
+	\par Метод независимых компонент (англ. Independent Component Analysis) является сравнительно новым методом. Впервые алгоритм был предложен Беллом и Сейновским в 1995. Он 
+позволяет восстановить независимые источники, которые линейно смешиваются и регистрируются несколькими датчиками, причём количество источников не должно превосходить количество датчиков для достижения высоких результатов. Кроме того, необходимо, чтобы источники были статистически независимы, а распределение сигнала каждого из источников не было нормальным. Существует несколько различных подходов к решению поставленной задачи, которые отличаются в то числе и используемым определением "независимости" источников. Чаще всего для процесс нахождения независимых компонент осуществляется путём минимизации совместной информации или максимизации отличия распределения от нормального.
+	\par Этот метод идеально подходит для анализа ЭЭГ при выделении артефактов глазных движений, а также для анализа вызванных потенциалов при выделении компонент, связанных с различными (независимыми) процессами.
 	\item
 	{\bf Общий пространственный фильтр}
 	\par Общий пространственный фильтр (англ. Common Spatial Pattern Filter, CSP) реализует метод декомпозиции многоканального ЭЭГ сигнала, основанный на обучении по прецедентам.
+	\par Рассматривается задача классификации многомерных сигналов на 2 класса. Целью метода является разложение исходного сигнала на аддитивные составляющие таким образом, чтобы максимизировать дисперсию первых компонент и минимизировать дисперсию последених для объектов первого класса и добиться обратной ситуации для объектов второго класса. Матрица декомпозиции может быть найдена в результате одновременной диагонализации выборочных матриц ковариации для каждого из классов. В результате может быть сформирован вектор характерных признаков путём соединения значений некоторого количества первых и последних компонент декомпозированного сигнала.
+	\par Метод также может быть обобщён для задачи с количеством классов, больших двух, путём разбиения исходной задачи на бинарные подзадачи с использованием схем <<один против одного>> или <<один против всех>>.
 	\item
 	{\bf Статический анализ сигнала}
-	\par Также зачастую используются вычисленные по зафиксированному сигналу статические характеристики, такие как выборочное среднее, энтропия и т.п.
+	\par Также зачастую используются вычисленные по фиксируемому сигналу статические характеристики, такие как ... (TODO: перечислить)
 	
 	\end{itemize}
 	\subsection{Классификация}
 	\par После построения искомого признакового пространства алгоритм, используемый для классификации преобразованных объектов, играет не столь значительную роль. Наиболее часто в исследованиях по тематике {\it BCI} используются следующие типы классификаторов (TODO: описать плюсы-минусы и общие идеи):
-	\begin{enumerate}
+	\begin{itemize}
 	\item
-	байесовский классификатор ...
+	{\bf Байесовский классификатор}
+	\par Байесовский классификатор — широкий класс алгоритмов классификации, основанный на принципе максимума апостериорной вероятности. Для классифицируемого объекта вычисляются функции правдоподобия каждого из классов, по ним вычисляются апостериорные вероятности классов. Объект относится к тому классу, для которого апостериорная вероятность максимальна.
+	\par Байесовский подход к классификации основан на теореме, утверждающей, что если плотности распределения каждого из классов известны, то искомый алгоритм можно выписать в явном аналитическом виде. Более того, этот алгоритм оптимален, то есть обладает минимальной вероятностью ошибок.
+	\par На практике плотности распределения классов, как правило, не известны. Их приходится оценивать (восстанавливать) по обучающей выборке. В результате байесовский алгоритм перестаёт быть оптимальным, так как восстановить плотность по выборке можно только с некоторой погрешностью. Зачастую в исследования по тематике создания нейрокомпьютерного интерфейса в качестве функции правдоподобия для объекта используется смесь нормальных распределений.
 	\item
-	линейный дискриминантный анализ ...
+	{\bf Линейный дискриминант Фишера}
+	\par Линейный дискриминант Фишера (ЛДФ) -- особый вариант байесовского классификатора. Рассмотрим задачу классификации на два класса. Предполагается, что обучающая выборка составлена таким образом, что классы распределены по нормальному закону, а матрицы ковариаций классов равны. Простота классификации линейным дискриминантом Фишера -- одно из достоинств алгоритма: в случае с двумя классами в двумерном признаковом пространстве разделяющей поверхностью будет прямая. Если классов больше двух, то разделяющая поверхность будет кусочно-лиинейной.
+	\par Данный метод классификации не требует больших вычислительных затрат, а потом является распространённым для онлайн-приложений.
 	\item
-	SVM ...
+	{\bf Метод опорных векторов}
+	\par Метод опорных векторов (англ. SVM, support vector machine) — набор схожих алгоритмов обучения с учителем, принадлежащий к семейству линейных классификаторов. Особым свойством метода опорных векторов является непрерывное уменьшение эмпирической ошибки классификации и увеличение зазора, поэтому метод также известен как метод классификатора с максимальным зазором. Кроме того, на положение разделяющей гиперплоскости в действительности оказывает влияние небольшая часть объектов обучающей выборки. Метод также обобщается на случай нелинейной разделяющей поверхности.
+	\par Зачастую используется в исследования по нейрокомпьютерных интерфейсах в силу сводимости к задаче квадратичного программирования и последующей эффективности вычислений.
 	\item
-	kNN
-	\end{enumerate}
+	{\bf Метод k ближайших соседей}
+	\par Метод k ближайших соседей (англ. k-nearest neighbor algorithm, kNN) — метод автоматической классификации объектов. Основным принципом метода ближайших соседей является то, что объект присваивается тому классу, который является наиболее распространённым среди соседей данного элемента. Соседи выбираются из обучающей выборки, и, исходя из ключевого для данного метода значения k, высчитывается, какой класс наиболее многочислен среди них.
+	\par Таким образом, если в процессе формирования признакового пространства удалось некоторым образом локализовать объекты каждого из классов в некоторой области пространства, данный метод может быть использован для классификации преобразованных объектов. Кроме того, среди достоинств данного метода ледует упомянуть вычислительную простоту, что делает его простым для использования в онлайн-приложениях.
+	\end{itemize}
 
 \newpage
 
@@ -338,14 +351,6 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 ссылаться на~работы, которые не~упоминаются в~тексте
 или которые не~имеют отношения к~данному тексту.
 
-\renewcommand{\bibname}{Список литературы}
-\addcontentsline{toc}{section}{\bibname}
 
-\nocite{hastie09elements,bishop06pattern,zhuravlev06recognition,zhuravlev78prob33,shlezinger04ten,boucheron05theory}
-
-\def\BibUrl#1.{}\def\BibAnnote#1.{}
-%\def\BibUrl#1{\\{\footnotesize\tt\def~{\char126} http://#1}}
-\bibliographystyle{gost71s}
-\bibliography{MachLearn}
 
 \end{document}
