--- a/temp.tex
+++ b/temp.tex
@@ -125,7 +125,14 @@
 \section{Обзор методов}
 	\par TODO: Переименовать раздел и вставить ссылки на источники
 	\par Образование и колебание потенциалов головного мозга является результатом физико-химических процессов, лежащих в основе обмена веществ в нервной ткани.
-	\par В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. TODO: картинка со схемой работы интерфейса
+	\par В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
+
+	\begin{figure}[H]
+	\center{\includegraphics[width=0.9\textwidth]{bci.png}}
+	\caption{Общая схема работы нейрокомпьютерных интерфейсов.}
+	\label{bci}
+	\end{figure}
+
 
 	\subsection{Предобработка}
 	\par Предобработка сигнала проводится с целью удаления артефактов (спонтанные сокращения мышц, моргание и т.п.), а также нейтрализации имеющихся шумовых компонент. Кроме того, зачастую интересующая информация содержится в определённом диапазоне частот, а остальные компоненты являются малоинформативными.
@@ -251,7 +258,7 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 	инвазивность — непогружной.
 	\end{itemize}
 
-	\begin{figure}[h]
+	\begin{figure}[H]
 	\center{\includegraphics[width=0.9\textwidth]{Emotiv.jpg}}
 	\caption{{\it Emotiv EPOC} ~--- устройство, используемое для записи данных.}
 	\label{Emotiv}
@@ -266,14 +273,30 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 	\label{electrode_map}
 	\end{figure}
 
-	\par TODO: Нужен ли отдельный раздел для Хиперы? Если да, то как назвать этот раздел и раздел про Хиперу?
-	\par В качестве динамического объекта, приводимого в движение при помощи ментальных команд, было использовано устройство {\it Khepera II}. Данное устройство было разработано швейцарской компанией {\it K-team Corporation}.
-	\par Устройство оснащено двумя моторами, приводящими в движение колёса по бокам робота. Устройство управляется путём осуществления команд установки либо изменения скоростей вращения каждого из моторов. (TODO: Нужно ли писать детали о том, как подключается робот к компьютеру, какими командами управляется и т.д.?) Таким образом, имеется возможность осуществления прямолинейного движения либо поворота устройства в плоскости его движения, тем самым команды поворота по и против часовой стрелке на фиксированный угол относительно текущей траектории позволяют управлять движением устройства на плоскости без остановки. Если же, помимо того, использовать команды начала движения и остановки устройства, появится возможность полного управления устройством при движении на плоскости.
+%	\par TODO: Нужен ли отдельный раздел для Хиперы? Если да, то как назвать этот раздел и раздел про Хиперу?
+%	\par В качестве динамического объекта, приводимого в движение при помощи ментальных команд, было использовано устройство {\it Khepera II}. Данное устройство было разработано швейцарской компанией {\it K-team Corporation}.
+%	\par Устройство оснащено двумя моторами, приводящими в движение колёса по бокам робота. Устройство управляется путём осуществления команд установки либо изменения скоростей вращения каждого из моторов. (TODO: Нужно ли писать детали о том, как подключается робот к компьютеру, какими командами управляется и т.д.?) Таким образом, имеется возможность осуществления прямолинейного движения либо поворота устройства в плоскости его движения, тем самым команды поворота по и против часовой стрелке на фиксированный угол относительно текущей траектории позволяют управлять движением устройства на плоскости без остановки. Если же, помимо того, использовать команды начала движения и остановки устройства, появится возможность полного управления устройством при движении на плоскости.
 
-\subsection{Схема эксперимента?}
+\subsection{Парадигма эксперимента}
+	\par Как правило, в исследованиях на основе визуальных стимулов используется следующая схема получения данных:
+	\begin{itemize}
+	\item
+	Испытуемому в течение $t_1$ секунд демонстрируется визуальный стимул либо ментальное задание, которое предстоит выполнить. 
+	\item
+	В течение $t_2$ секунд испытуемый сосредотачивает внимание на визуальном стимуле либо выполняет указанное ментальное задание. Кроме того, в процессе этого действия происходит запись данных.
+	\item Визуальный стимул перестаёт демонстрироваться испытуемому, проводится краткая пауза для восстановления расслабленного состояния и подготовки к следующей итерации.
+	\end{itemize}
+
+	\par После изучения материалов по исследуемой тематике и различных видов парадигм, используемых для проверки надёжности систем управления с использованием нейрокомпьютерных интерфейсов в различных приложениях было принято решение два типа парадигм, близких к предложенным в (Пиччоне) с использованием двух различных видов визуальных стимулов. ...
+	\par Поулчение данных производилось следующим образом. Испытуемый располагался лицом к монитору компьютера с устройством {\it Emotiv EPOC}, расположенным на голове. На экране монитора было изображено квадратное поле, разбитое на 100 равных квадратов прямыми, параллельными его сторонам, путём деления каждой стороны на 10 отрезков. Каждый из квадратов являеся возможным положением курсора на экране компьютера. Целью испытуемого являлось управление курсором в виде голубого квадрата, расположенного на экране компьютера от начального до обозначенного конечного положения. Четыре визуальных стимула выделялись на экране последовательно случайным образом, в каждый момент времени было выделено не более одного визуаильного стимула. Каждый из стимулов соответствовал одному из возможных направлений движения курсора (вверх, вниз, влево, вправо). Испытуемый должен был сконцентрировать внимание на стимуле, отвечающем желаемому направлению движения (т.н. целевой стимул), и игнорировать остальные стимулы, отвечающие нежелательным направлениям движения курсора (т.н. отвлекающие стимулы).
+	\par Назовём {\it пробой} последовательность из выделения некоторого визуального стимула в течение 250 мс, а также последующие 1250 мс, необходимые для обработки, классификации данных, генерации и выполнения перемещения курсора. Интервал между двумя выделениями стимулов был установлен равным 2.5 с, включая время, необходимое на обработку и классификацию данных. Назовём {\it сессией} последовательность проб, предпринятых для достижения курсором целевого положения.
+	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положение по умолчанию и инверсированное положение. В положении по умолчанию были использованы данные 10 сенсоров, указанных на рис.~\ref{default} (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, and F4), поскольку данное подмножество обеспечивает покрытие части скальпа, отвечающей за P300-волны. В инверсированном положении были использованы данные 8 сенсоров, указанных на рис.~\ref{reversed}, поскольку они покрывают центральную часть скальпа, которая считается областью, наиболее активно отвечающей за генерацию P300-волн.
+
+\subsection{Схема эксперимента}
+	\par 
 
 \newpage
-\section{Новые подходы и~результаты}
+\section{Новые подходы и результаты}
 
 Название этого раздела обязательно надо заменить на~содержательное. 
 В~этом разделе, как правило, много подразделов. 
