--- a/temp.tex
+++ b/temp.tex
@@ -293,8 +293,28 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положение по умолчанию и инверсированное положение. В положении по умолчанию были использованы данные 10 сенсоров, указанных на рис.~\ref{default} (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, and F4), поскольку данное подмножество обеспечивает покрытие части скальпа, отвечающей за P300-волны. В инверсированном положении были использованы данные 8 сенсоров, указанных на рис.~\ref{reversed}, поскольку они покрывают центральную часть скальпа, которая считается областью, наиболее активно отвечающей за генерацию P300-волн.
 
 \subsection{Схема эксперимента}
-	\par 
-
+	\par Самая распространённая схема эксперимента в нейрокомпьютерных интерфейсах, основанных на выявлении P300-волн, предполагает, что ответ на целевой стимул не зависит от конкретного стимула, в связи с этим классификация является эффективным методов отличия целевых от отвлекающих стимулов. Тем не менее, некоторые исследования, в частности ..., описывают применение агрегатной техники классификации и демонстрирует, что она может повысить производительность системы. В связи с этим, было решено применить оба полхода и сравнить полученные результаты.
+	\par Схема эксперимента для каждого испытуемого состояла из двух частей: предобучение и тестирование в режиме реального времени. В процессе предобучения пользователю необходимо произвести предписанную последовательность действий, описанную ниже, позволяющую собрать некоторое количество данных, используемых для обучения классификатора. В процессе тестирования в режиме реального времени пользователю необходимо производить похожую процедуру, однако полученные данные для каждого из стимулов обрабатываются и классифицируются при помощи предобученного классификатора в тот же момент времени, а также принимается решение о наличии или отсутствии P300-волн и, соответственно, необходимости перемещения курсора в соответствующем направлении.
+	\par Процесс предобучения
+	\par Для функционирования обоих методов необходимо проведение процедуры предобучения отдельно для каждого испытуемого (в силу физиологических различий, ненадёжной фиксации устройства на голове человека, изменения потенциала тела человека с течением времени и т.д.). Предобучение проводится по следующей схеме:
+	\begin{itemize} 
+	\item
+	Испытуемый концентрирует внимание на одном из визуальных стимулов в течение 8 раундов.
+	\item
+	В течение раунда каждый из 4 визуальных стимулов выделяется в течение 250 мс, затем следует 2.25 с ожидания.
+	\item
+	Пjсле 8 раундов процесс останавливается на 10 секунд, а затем проводятся раунды для следующего визуального стимула.
+	\item
+	Таким образом, обучающая сессия состоит из 32 раундов записи ЭЭГ, содержащих 32 эпохи целевых данных и 96 эпох отвлекающих данных
+	\item
+	Кроме того, также проводится 4 эпохи для записи данных, отвечающих спокойному состоянию испытуемого, т.е. испытуемый расслаблен, а визуальные стимулы не выделяются.
+	\item
+	Таким образом, количество отвлекающих эпох составляет 100. ...
+	\par Для агрегатной схемы всё то же самое, но 15 раундов.
+	
+\subsection{Предобработка}
+	
+	\end{itemize}
 \newpage
 \section{Новые подходы и результаты}
 
